--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 rust-version = "1.80"
 
 [dependencies]
-anyhow = "1.0.68"                                # error handling
-bytes = "1.3.0"                                  # helps manage buffers
-thiserror = "1.0.38"                             # error handling
+anyhow = "1.0.95"
+bytes = "1.10.0"
+clap = { version = "4.5.28", features = ["derive"] }
+thiserror = "2.0.11"
