--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ rust-version = "1.80"
 anyhow = "1.0.95"
 bytes = "1.10.0"
 clap = { version = "4.5.28", features = ["derive"] }
+paste = "1.0.15"
 thiserror = "2.0.11"
