--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ rust-version = "1.80"
 anyhow = "1.0.95"
 bytes = "1.10.0"
 clap = { version = "4.5.28", features = ["derive"] }
+nom = "8.0.0"
 paste = "1.0.15"
 thiserror = "2.0.11"
